# TransitSQLBench

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: check.yml
baselines/: cold_subagent_2026-04-28.json
benchmark/v1/: questions.yaml
scripts/: naive_llm_baseline.py
spatialbench/data/: fetch.py  load.py  manifest.yaml
spatialbench/queries/: cli.py  reference.py
tests/benchmark/: test_schema.py
tests/data/: test_fetch.py  test_load.py
tests/queries/: test_cli.py  test_reference.py
transitsqlbench/benchmark/: schema.py
transitsqlbench/data/: fetch.py  load.py
transitsqlbench/queries/: cli.py  reference.py
